# linkDB

./: .gitignore  README.md
backend/: .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile  README.md  alembic.ini  package-lock.json  package.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260415193000_initial_python_backend.py  20260415210000_add_read_later_links.py
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/core/: config.py  errors.py  http.py  rate_limit.py
backend/app/db/: category_seed.py  models.py  session.py
backend/app/dependencies/: auth.py
backend/app/domain/: constants.py
backend/app/schemas/: auth.py  categories.py  common.py  links.py
backend/app/scripts/: common.py  create_category.py  create_user.py  delete_user.py  reset_password.py  seed_demo_users.py
backend/app/security/: password.py  session.py
backend/app/services/: auth.py  categories.py  links.py  read_later.py
backend/tests/: conftest.py  test_auth_routes.py  test_auth_service.py  test_categories.py  test_links_routes.py  test_links_service.py  test_read_later.py
docs/: e2e-checklist.md
frontend/: .env.example  .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo
frontend/nginx/: default.conf
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: auth.ts  categories.ts  client.ts  links.ts  read-later.ts  types.ts
infra/: .env.example  docker-compose.yml
(+16 files in other folders)
