[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linkdb-backend"
version = "0.1.0"
description = "Python backend for LinkDB"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "alembic>=1.14,<2.0",
  "bcrypt>=4.2,<5.0",
  "cryptography>=45.0,<46.0",
  "fastapi>=0.115,<1.0",
  "pydantic>=2.11,<3.0",
  "pydantic-settings>=2.8,<3.0",
  "pymysql>=1.1,<2.0",
  "python-dotenv>=1.0,<2.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=8.3,<9.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"

[tool.setuptools.packages.find]
include = ["app*"]
